<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    tools:context=".BottomMenuFragment"
    android:orientation="horizontal"
    android:background="@color/black"
    >


    <Button
        android:id="@+id/menuButton1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_button"
        android:layout_weight="25"
        />

    <Button
        android:id="@+id/menuButton2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/exercise_manager_button"
        android:layout_weight="25"/>

    <Button
        android:id="@+id/menuButton3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/buffered_sets_button"
        android:layout_weight="25"/>

    <Button
        android:id="@+id/menuButton4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/statistics_button"
        android:layout_weight="25"
        />

</LinearLayout>