<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView3"
        android:name="com.example.setlogger.BottomMenuFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        />

    <EditText
        android:id="@+id/exercise_rom_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_name_input"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/reset_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/reset_exercise_button"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView3"
        app:layout_constraintEnd_toStartOf="@+id/save_exercise_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_rom_input"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/save_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/save_exercise_button"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_rom_input"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/delete_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:backgroundTint="@color/gray"
        android:text="@string/delete_exercise_button"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toEndOf="@+id/save_exercise_button"
        app:layout_constraintTop_toBottomOf="@+id/exercise_rom_input"
        app:layout_constraintVertical_bias="0.024" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/exercise_name_input"
        android:layout_width="299dp"
        android:layout_height="43dp"
        android:hint="@string/exercise_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36px"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/fragmentContainerView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_edit_button"
        app:layout_constraintVertical_bias="0.203" />

    <Button
        android:id="@+id/stop_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36px"
        android:layout_marginBottom="36px"
        android:text="@string/stop_edit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_exercise_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>