<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"

    >

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/reps_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/exercise_name_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:focusable="true"
        android:editable="true"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@+id/weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/reps_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        android:gravity="center_horizontal"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/submitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_exercise_button"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reps_input"
        app:layout_constraintVertical_bias="0.254" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.setlogger.BottomMenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercise_search_result_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:text="@string/kg"
        app:layout_constraintBottom_toBottomOf="@+id/weight_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/weight_input"
        app:layout_constraintTop_toTopOf="@+id/weight_input"
        app:layout_constraintVertical_bias="0.0"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:text="@string/Weight"
        app:layout_constraintBottom_toBottomOf="@+id/weight_input"
        app:layout_constraintEnd_toStartOf="@+id/weight_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weight_input"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="50dp"/>

    <TextView
        android:id="@+id/exercise_text_view"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="50dp"
        android:text="@string/Exercise"
        app:layout_constraintBottom_toTopOf="@+id/weight_input"
        app:layout_constraintEnd_toStartOf="@+id/exercise_name_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exercise_name_input" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:text="@string/Reps"
        app:layout_constraintBottom_toBottomOf="@+id/reps_input"
        app:layout_constraintEnd_toStartOf="@+id/reps_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_input"
        app:layout_constraintVertical_bias="0.483"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>